# backend-interview

./: .gitignore  ARCHITECTURE.md  README.md  compose.yaml  feathr-requirements.md
server/: .dockerignore  .env  .pylintrc  Dockerfile  README.md  TESTS.md  pyproject.toml
server/app/: main.py  models.py
server/app/config/: redis.py
server/app/core/: database.py
server/app/dependencies/: README.md  database.py  elasticsearch.py  redis.py  rq.py
server/app/helpers/: date.py
server/app/models/: event.py
server/app/routers/: events.py  tests.py
server/app/routers/events/: __init__.py  crud.py  search.py  stats.py
server/sample-requests/: README.md
server/sample-requests/crud/: create_event.http  get_events_by_type_and_time_range.http
server/sample-requests/search/: search_with_event_type_filter.http
server/sample-requests/stats/: get_daily_event_stats_with_start_date.http  get_hourly_event_stats.http
server/sample_requests/: README.md  create_event.http  create_event_with_missing_field.http  create_event_with_mistyped_field.http
server/sample_requests/analytics/: get_daily_event_stats.http  get_daily_event_stats_with_start_and_end_date.http
server/sample_requests/crud/: delete_events.http  get_events.http
server/sample_requests/ingest/: create_event_with_mistyped_field.http
server/tests/: simple_load_test.py
server/tests/integration/: conftest.py  test_events_crud.py  test_events_search.py
server/tests/unit/: test_build_search_query.py  test_build_stats_query.py  test_date.py  test_generate_cache_key.py
(+9 files in other folders)
