[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Jarvis",email = "mjarvis1997@gmail.com"}
]
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "fastapi (>=0.132.0,<0.133.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "rq (>=2.7.0,<3.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "rq-dashboard (>=0.8.6,<0.9.0)",
    "requests (>=2.32.5,<3.0.0)",
    "elasticsearch (>=9.3.0,<10.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]
